Habilitando os repositórios JPA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8089
 
 server.servlet.context-path=/api
 
@@ -6,4 +6,5 @@ spring.datasource.url=jdbc:postgresql://dpg-ck2cuij6fquc73bk65dg-a.oregon-postgr
 spring.datasource.username=hsxflowers
 spring.datasource.password=BLJwgPXdeFZ6W7cie2KyM1BcnwmGzz7G
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
